WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313239
Fix imported/w3c/web-platform-tests/css/css-sizing/calc-margins-flex.html
https://bugs.webkit.org/show_bug.cgi?id=313239
Summary
Fix imported/w3c/web-platform-tests/css/css-sizing/calc-margins-flex.html
alan
Reported
2026-04-24 09:27:58 PDT
ssia
Attachments
[fast-cq]Patch
(5.62 KB, patch)
2026-04-24 09:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-24 09:39:33 PDT
Created
attachment 479287
[details]
[fast-cq]Patch
EWS
Comment 2
2026-04-24 12:21:01 PDT
Committed
311977@main
(5ac3ac75ef74): <
https://commits.webkit.org/311977@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479287
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-04-24 12:22:13 PDT
<
rdar://problem/175532405
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug