[Flex] Fix imported/w3c/web-platform-tests/css/css-sizing/calc-margins-flex.html https://bugs.webkit.org/show_bug.cgi?id=313239

Reviewed by Antti Koivisto.

A flex item with margin-left: calc(10% + 100px) inside a min-content
flex container should contribute 100px to the container's intrinsic
width (the percentage resolves to 0 in intrinsic sizing).

marginIntrinsicLogicalWidthForChild only supports fixed values.

The fix uses Style::evaluateMinimum which properly extracts the fixed
component from calc() expressions (the percentage part resolves to 0
when the available width is 0).

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/calc-margins-percent-flex-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/calc-margins-percent-flex.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::marginIntrinsicLogicalWidthForChild const):

Canonical link: https://commits.webkit.org/311977@main